istio/service.tpl.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: "REPLACE_VM_APP"
  name: "REPLACE_VM_APP"
  namespace: "REPLACE_VM_NAMESPACE"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: "REPLACE_VM_APP"
